# Supervertaler-Workbench-v2

./: CHANGELOG.md  CLAUDE.md  README.md  SUPERVERTALER_WORKBENCH_REWRITE.md  package-lock.json  package.json
.github/workflows/: deploy-docs.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/ai-translation/: overview.md
docs/src/content/docs/editor/: editing-and-confirming.md  keyboard-shortcuts.md  tag-display-modes.md  translation-grid.md
docs/src/content/docs/formats/: mqxliff.md  sdlxliff.md  supported-formats.md  xliff.md
docs/src/content/docs/getting-started/: api-keys.md  (+3 more)
docs/src/styles/: custom.css
src/: App.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: import_export.rs  mod.rs  okapi.rs  project.rs  segments.rs  settings.rs  termbase.rs  tm.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/matching/: levenshtein.rs  mod.rs  tm_search.rs
src-tauri/src/parsers/: mod.rs  sdlxliff.rs  xliff.rs
src/components/grid/: MatchPercentageBadge.tsx  StatusCellRenderer.tsx  TaggedCellEditor.tsx  TaggedTextRenderer.tsx  TranslationGrid.tsx
src/components/layout/: AppLayout.tsx  MenuBar.tsx  PanelLayout.tsx  StatusBar.tsx
src/components/termlens/: TermLensPanel.tsx
src/components/tm/: TMResultsPanel.tsx
src/store/: projectStore.ts  segmentStore.ts  settingsStore.ts  uiStore.ts
src/types/: llm.ts  project.ts  segment.ts  termbase.ts  tm.ts
test-files/: sample.xliff
(+3 files in other folders)
