[package]
name = "supervertaler-workbench"
version = "2.0.0"
description = "Cross-platform AI translation workbench"
authors = ["Michael Beijer"]
edition = "2021"

[lib]
name = "supervertaler_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
quick-xml = "0.37"
tokio = { version = "1", features = ["full"] }
zip = "2"
strsim = "0.11"
